<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Resocializer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_started">Log in using Facebook</string>
    <string name="app_id">386098464849724</string>
    <string name="lcbText">Log Conversation</string>
    <string name="psText">Progress</string>
    <string name="abtText">About</string>
    <string name="welcomeText">Ready to resocialize?</string>
    <string name="action_logout">Log Out</string>
    <string name="photoButton"> Take Photo </string>
    <string name="milestoneImage"> milestone image </string>
    <string name="milestonetext01">Start your resocialization with your first resocialized conversation!</string>
    <string name="milestonetext02">Two\'s company! Have a conversation with two friends at once.</string>
    <string name="milestonetext03">The more the merrier! Have a four friend conversation.</string>
    <string name="milestonetext04">You\'re on your way to getting resocialized! Have a total of five resocialized conversations.</string>

</resources>
