<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:visibility="gone" />
    
    <TextView 
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/textMidGray"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/lcb"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_color"
        android:onClick="logConversation"
        android:text="@string/lcbText"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:visibility="invisible" />
    
     <Button
        android:id="@+id/ps"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_color"
        android:onClick="logConversation"
        android:text="@string/psText"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:visibility="invisible" />
     
      <Button
        android:id="@+id/abt"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_color"
        android:onClick="logConversation"
        android:text="@string/abtText"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:visibility="invisible" /> 


</LinearLayout>